# stat-scraper-web

./: .gitignore  DEV_README.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
.github/workflows/: docker-image.yaml
.run/: Docker Compose Down.run.xml  FastAPI 🟡(dev).run.xml  Tailwind build _ minify.run.xml  Tailwind build _ watch.run.xml
app/: main.py  model.py  package-lock.json  package.json  tailwind.config.js
app/static/: chat_log.js  consts.js  index.js  main.css  mmr_chart.js  model.js  utils.js  view_utils.js
app/static/src/: README.md  main.css
app/templates/: base_layout.j2  games.j2  index.j2
db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--4542931772920871696.wt  collection-0-6047777177521086657.wt  collection-2--4542931772920871696.wt  collection-4--4542931772920871696.wt  collection-7--4542931772920871696.wt  index-1--4542931772920871696.wt  index-1-6047777177521086657.wt  index-2-6047777177521086657.wt  index-3--4542931772920871696.wt  index-5--4542931772920871696.wt  index-6--4542931772920871696.wt  index-8--4542931772920871696.wt  index-9--4542931772920871696.wt  sizeStorer.wt
db/diagnostic.data/: metrics.2023-01-04T03-49-04Z-00000  metrics.2023-01-04T03-49-13Z-00000  metrics.2023-01-04T03-50-52Z-00000  metrics.2023-01-04T03-52-49Z-00000  metrics.2023-01-04T03-56-04Z-00000  metrics.2023-01-04T04-04-35Z-00000  metrics.2023-01-04T04-06-10Z-00000  metrics.interim
original_images/: epic_logo.pxd  ps4_logo.pxd  steam_logo.pxd  switch_logo.pxd  unranked.pxd  xbox_logo.pxd
(+338 files in other folders)
