[tool.poetry]
name = "stat-scraper-web"
version = "1.0.0"
description = ""
authors = ["John Sturgeon <john.sturgeon@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"
pycurl = "^7.45.1"
jinja2 = "^3.1.2"
arrow = "^1.2.3"
beanie = "^1.16.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
